fixed overflow for task-title and mostly (there is still an issue with x-axis scrolling) fixed subtask-title overflow

--- a/src/app/components/sub-task/sub-task.component.css
+++ b/src/app/components/sub-task/sub-task.component.css
@@ -1,7 +1,7 @@
 
 .checkbox {
-  height: calc(12px + 1vh);
-  width: calc(12px + 1vh);
+  min-height: calc(12px + 1vh);
+  min-width: calc(12px + 1vh);
   border-radius: 5px;
   margin-right: 5px;
   border: #292929 1px solid;
@@ -11,8 +11,8 @@
 .subtask {
   display: flex;
   flex-direction: row;
-  align-items: center; /* Centers content vertically */
-  justify-content: flex-start; /* Ensures checkbox and title/input stay aligned to the left */
+  align-items: center;
+  justify-content: flex-start;
   width: 100%;
   margin-bottom: 5px;
 }
@@ -20,7 +20,10 @@
 .subtask-name {
   margin: 0;
   display: flex;
-  align-items: center; /* Ensures the title or input is centered vertically */
+  align-items: center;
+  min-width: 95%;
+  max-width: 95%;
+  word-wrap: break-word; /* This doesn't work as intended. Words are not broken and there is x-axis overflow and scrolling; I don't want that. */
 }
 
 .input {
@@ -30,4 +33,5 @@
   border: #292929 1px solid;
   font-family: Futura;
   font-weight: bold;
+  min-width: 100%;
 }
